extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:12:18:error: expected enumeration CarColour type got enumeration WeekDays
    CarColour := Wednesday;
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:15:5:error: illegal assignment
    Red := Blue;
    ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:19:15:error: expected enumeration CarColour type got enumeration WeekDays
    IF Blue < Tuesday THEN
              ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:24:8:error: expected integer or any enumeration type got boolean
    IF FALSE < TRUE THEN
       ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:29:18:error: expected enumeration CarColour type got integer
    CarColour := 0;
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:32:10:error: expected integer type got enumeration CarColour
    i := Red;
         ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:35:18:error: expected integer type got enumeration CarColour
    CarColour := Red + Green;
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:35:22:error: expected enumeration CarColour type got integer
    CarColour := Red + Green;
                     ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:35:24:error: expected integer type got enumeration CarColour
    CarColour := Red + Green;
                       ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:38:18:error: expected integer type got enumeration CarColour
    CarColour := Red + Monday;
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:38:22:error: expected enumeration CarColour type got integer
    CarColour := Red + Monday;
                     ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:38:24:error: expected integer type got enumeration WeekDays
    CarColour := Red + Monday;
                       ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/semantic/enumerr2.obr:41:10:error: expected integer type got enumeration CarColour
    i := Red + 1;
         ^
